# db-init-lambda

./: Cargo.toml  Makefile  README.md  aws-eventbridge-rule.json  aws-lambda-policy.json
src/: main.rs
test/: README.md  rds-createdbinstance-event.json
