[package]
name = "db-init-lambda"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.deploy]
memory = 128
timeout = 900
role = "arn:aws:iam::000111:role/db-init-lambda-cargo-deploy"

[dependencies]
aws_lambda_events = { version = "0.7", default-features = false, features = ["cloudwatch_events"] }
aws-config = "0.55"
aws-sdk-rds = "0.27"
aws-sdk-secretsmanager = "0.27"
lambda_runtime = "0.8"
rand = "0.8"
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tokio = { version = "1", features = ["macros"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.10"
